# paucasedmatura-src

./: .gitignore  .gitmodules  .travis.yml  README.md  archive-rsync.sh  paucasedmatura.cabal
hakyll/: Contexts.hs  Language.hs  LanguageTable.hs  Languages.hs  Main.hs  Prefixes.hs  Routes.hs
site/: index.html
site/css/: hakyll-sidebar.css  syntax-solarized-light.css
site/css/jvdj/: base.css  layout.css
site/files/other/: 2011-03_podgetrc
site/src/de/: index.md  joaopizani.md  posts.md
site/src/de/blog/ac/: 2011-05-21_buitenland.md
site/src/de/blog/misc/: 2009-07-23_jamendo.md  2009-10-17_winterkurs-2010-dusseldorf.md  2009-10-26_flugtickets-gekauft.md  2009-12-29_brazil-ddorf.md  2009-12-29_letzter-eintrag-brasilien.md  2010-04-07_die-ankunft.md  2010-06-13_bedeutungsloser-eintrag.md  2010-06-13_die-gruende.md  2010-06-13_sprache-herman-hesse.md  2010-06-13_unsagbar.md  2010-08-01_winterferien.md
site/src/en/: bib.md  bsc-overview.md  index.md  joaopizani.md  msc-overview.md  posts.md  vhdl-tutorial.md
site/src/en/blog/ac/: 2009-07-20_ufsc091-end.md  2010-06-13_ufsc101.md  2011-04-20_tcc.md  (+18 more)
site/src/en/bsc/: cs1.md  cs2.md  cs3.md  cs4.md  cs5.md  cs6.md  cs7.md  cs8.md  cs9.md
site/src/en/msc/: cs1.md  cs2.md  cs3.md  cs4.md
site/src/pt/: bib.md  bsc-overview.md  index.md  joaopizani.md  msc-overview.md  posts.md  vhdl-tutorial.md
site/src/pt/bsc/: cs1.md  cs2.md  cs3.md  cs4.md  cs5.md  cs6.md  cs7.md  cs8.md  cs9.md
site/src/pt/msc/: cs1.md  cs2.md  cs3.md  cs4.md
site/templates/: archive.html  default.html  post-list.html  post.html
(+168 files in other folders)
