name: paucasedmatura
version: 0.1.0.0
synopsis: Personal blog generated with Hakyll
homepage: paucasedmatura.alvb.in
author: João Paulo Pizani Flor
maintainer: webmaster@alvb.in
build-type: Simple
cabal-version: >=1.10
-- extra-source-files:  

executable paucasedmatura
    hs-source-dirs: hakyll
    main-is: Main.hs
    other-modules: Prefixes, Languages, Routes, Contexts
    build-depends: base >=4.6, hakyll >= 4.0.0.0, containers, filepath >= 1.3.0.0
    default-language: Haskell2010
    -- other-extensions:    
